Managed to get UpdateOrder working

--- a/OrderItemWeb/Views/Order/Index.cshtml
+++ b/OrderItemWeb/Views/Order/Index.cshtml
@@ -92,7 +92,7 @@
                         <a class="page-link"><i class="fas fa-backward"></i></a>
                     </li>
                     <li class="page-item active"> <a class="page-link">1</a></li>
-                    @for (int i = 1; i < @ViewBag.TotalPages; i++)
+                    @for (int i = 1; i < ViewBag.TotalPages; i++)
                     {
                         @if (i == 3)
                         {
